# battleship

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  crates.js  help.html  host.json.sample  next.config.js  package-lock.json  package.json  search-index.js  settings.html  source-files.js  src-files.js  tailwind.config.ts
.github/workflows/: CI.yml  gh_pages.yml  publish.yml
app/: globals.css  layout.tsx  notifier.tsx  page.tsx
battleship/: all.html  fn.main.html  index.html  sidebar-items.js
battleship/_doc/: index.html  sidebar-items.js
battleship/app/: fn.run_app.html  index.html  sidebar-items.js  struct.AppHook.html  struct.AppState.html  struct.PageVisit.html
battleship/args/: index.html  sidebar-items.js  struct.CommandLineParameters.html
battleship/config/: constant.DEFAULT_ADDR.html  constant.DEFAULT_BOARD_SIZE.html  constant.DEFAULT_CONFIG_PATH.html  constant.DEFAULT_PORT.html  constant.DEFAULT_SHIP_COUNT.html  constant.DEFAULT_SIMULATED_FAILURE_FACTOR.html  constant.SHIP_GENERATION_MAX_RETRY.html  index.html  sidebar-items.js  struct.DATETIME_FORMAT.html  struct.HostConfiguration.html
battleship/error/: enum.AppError.html  index.html  macro.expand_variants!.html  macro.expand_variants.html  sidebar-items.js
battleship/logger/: enum.LogLevel.html  fn.critical.html  fn.debug.html  fn.error.html  fn.info.html  fn.trace.html  (+4 more)
components/: boardControl.tsx  boardDisplay.tsx  config.tsx  inputButton.tsx  intelDisplay.tsx  shipDisplay.tsx  textField.tsx  titleBar.tsx  tooltip.tsx
src/: args.rs  error.rs  logger.rs  main.rs
(+307 files in other folders)
